add some details to project